Don't use the public constructor for URL
They are being deprecated: https://bugs.openjdk.org/browse/JDK-8294241